--- a/styling.css
+++ b/styling.css
@@ -5,18 +5,27 @@
 }
 body{
     background-color: rgb(34, 34, 34);
-    height: 140vh;
+    height: 100vh;
+}
+span{
+    color: orange;
+    border-bottom: 3px solid white;
+}
+p{
+    text-align: center;
 }
 li{
     margin: 2px 20px;
     color: white;
     font-size: 1.3rem;
-    padding: 7px;
+    padding: 5px;
 }
 h2{
-    margin: 2px 20px;
-    color: white;
-    padding: 15px;
+    display: inline-block;
+    margin: 2px 50px;
+    color: rgb(21, 255, 0);
+    padding: 5px;
+    border-bottom: 5px solid white;
 }
 h1{
     margin: 20px 0;
@@ -31,7 +40,7 @@ h1{
     flex-direction: column;
 }
 .container-grid{
-    margin: 50px 0;
+    margin: 35px 0;
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(5,50px);
